[package]
name = "telegram-bot-docker"
version = "0.1.0"
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.12"
log = "0.4.14"
env_logger = "0.8.2"
dotenv = "0.15.0"
